--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,5 @@
 [defaults]
 inventory = inventory
-private_key_file = /home/ec2-user/.ssh/id_rsa
+ansible_ssh_private_key_file=/home/ec2-user/.ssh/id_rsa
+interpreter_python=auto_silent
+host_key_checking = False
